--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,3 +16,5 @@ jobs:
           node-version: '16'
       - name: Install dependencies
         run: npm install
+      - name: Check style
+        run: npm run eslint
