--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,13 +18,17 @@ jobs:
           node-version: '16'
       - name: Install dependencies
         run: npm install
-      - name: Check style
-        run: npm run eslint
-      - name: build
+      - if: ${{ github.event_name == 'pull_request' }}
+        name: Check style
+        run: npm run eslint^
+      - if: ${{ github.event_name == 'pull_request' }}
+        name: build
         run: npm run build
-      - name: test
+      - if: ${{ github.event_name == 'pull_request' }}
+        name: test
         run: npm run test
-      - name: e2e tests
+      - if: ${{ github.event_name == 'pull_request' }}
+        name: e2e tests
         uses: cypress-io/github-action@v5
         with:
           command: npm run test:e2e
