--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm install
       - if: ${{ github.event_name == 'pull_request' }}
         name: Check style
-        run: npm run eslint^
+        run: npm run eslint
       - if: ${{ github.event_name == 'pull_request' }}
         name: build
         run: npm run build
