--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,3 +40,14 @@ jobs:
         with:
           service-id: ${{ secrets.RENDER_SERVICE_ID }}
           api-key: ${{ secrets.RENDER_API_KEY }}
+  tag_release:
+      needs: [simple_deployment_pipeline]
+      runs-on: ubuntu-20.04
+      steps:
+        - if: ${{ github.event_name == 'push' }}
+          name: Bump version and push tag
+          uses: anothrNick/github-tag-action@1.67.0
+          env:
+            DEFAULT_BUMP: patch
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
