--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,10 +44,12 @@ jobs:
       needs: [simple_deployment_pipeline]
       runs-on: ubuntu-20.04
       steps:
+        - uses: actions/checkout@v3
         - if: ${{ github.event_name == 'push' }}
           name: Bump version and push tag
           uses: anothrNick/github-tag-action@1.67.0
           env:
-            DEFAULT_BUMP: patch
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            DEFAULT_BUMP: patch,
+            
 
