--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,8 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  simple_deployment_pipeline:
+  test:
+    if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -18,38 +19,41 @@ jobs:
           node-version: '16'
       - name: Install dependencies
         run: npm install
-      - if: ${{ github.event_name == 'pull_request' }}
-        name: Check style
+      - name: Check style
         run: npm run eslint
-      - if: ${{ github.event_name == 'pull_request' }}
-        name: build
+      - name: build
         run: npm run build
-      - if: ${{ github.event_name == 'pull_request' }}
-        name: test
+      - name: test
         run: npm run test
-      - if: ${{ github.event_name == 'pull_request' }}
-        name: e2e tests
+      - name: e2e tests
         uses: cypress-io/github-action@v5
         with:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-      - if: ${{ github.event_name == 'push' }}
-        name: Deploy to production
+  deploy:
+    if: ${{ github.event_name == 'push' }}
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: ${{ secrets.RENDER_SERVICE_ID }}
           api-key: ${{ secrets.RENDER_API_KEY }}
   tag_release:
-      needs: [simple_deployment_pipeline]
-      runs-on: ubuntu-20.04
-      steps:
-        - uses: actions/checkout@v3
-        - if: ${{ github.event_name == 'push' }}
-          name: Bump version and push tag
-          uses: anothrNick/github-tag-action@1.67.0
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            DEFAULT_BUMP: patch,
+    if: ${{ github.event_name == 'push' }}
+    needs: [deploy]
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+        name: Bump version and push tag
+      - uses: anothrNick/github-tag-action@1.67.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
             
 
