--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
   deploy:
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event_name == 'push' && contains(join(toJson(github.event.commits.*.message),' '),'#skip') == false}}
     runs-on: ubuntu-20.04
     steps:
       - name: Deploy to production
