--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,9 +20,19 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Check style
+        id: Styling
         run: npm run eslint
       - name: build
+        id: build
         run: npm run build
+      - name: Build failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: ${{  failure() && steps.build.conclusion == 'failure' }}
+        with:
+          severity: error
+          description: Build failed
+          details: commit ${{ join(github.event.commits.*.url, ' ') }}
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: test
         run: npm run test
       - name: e2e tests
