--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,13 +26,13 @@ jobs:
         id: build
         run: npm run build
       - run: echo steps.build.conclusion
-      - name: Test Success
-        uses: rjstone/discord-webhook-notify@v1
-        if: success()
-        with:
-            severity: info
-            details: Test Succeeded!
-            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      # - name: Test Success
+      #   uses: rjstone/discord-webhook-notify@v1
+        # if: success()
+        # with:
+        #     severity: info
+        #     details: Test Succeeded!
+        #     webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: test
         run: npm run test
       - name: e2e tests
