--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,7 +25,10 @@ jobs:
       - name: build
         id: build
         run: npm run build
-      - run: echo steps.build.conclusion
+      - name: github context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
       # - name: Test Success
       #   uses: rjstone/discord-webhook-notify@v1
         # if: success()
