--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test:
-    if: ${{ github.event_name == 'pull_request' }}
+    if: ${{ github.event_name == 'pull_request' && github.event_name == 'workflow_dispatch'}}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
