--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,11 +7,10 @@ on:
   pull_request:
     branches: [master]
     types: [opened, synchronize]
-  workflow_dispatch:
 
 jobs:
   test:
-    if: ${{ github.event_name == 'pull_request' }}
+    # if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -44,7 +43,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
   deploy:
-    if: ${{ github.event_name == 'push' && contains(join(toJson(github.event.commits.*.message),' '),'#skip') == false}}
+    if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message,' '),'#skip')}}
     runs-on: ubuntu-20.04
     steps:
       - name: Deploy to production
