--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,9 +42,12 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-      - name: test has succeeded
+      - name: tests passed
         if: ${{ success() }}
-        run: echo succeeded
+        run: echo test did pass
+      - name: tests not passed!
+        if: ${{ !success() }}
+        run: echo test did not pass!
   deploy:
     if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message,' '),'#skip')}}
     runs-on: ubuntu-20.04
