--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,6 +48,8 @@ jobs:
       - name: tests not passed!
         if: ${{ !success() }}
         run: echo test did not pass!
+      - name: Jobs
+        run: echo ${{ jobs.test.result }}
   deploy:
     if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message,' '),'#skip')}}
     runs-on: ubuntu-20.04
