--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,7 +47,7 @@ jobs:
         run: echo test did pass
       - name: tests not passed!
         if: ${{ !success() }}
-        run: echo test did not pass! ${{ steps }}
+        run: echo test did not pass! ${{ toJSON(steps) }}
   deploy:
     if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message,' '),'#skip')}}
     runs-on: ubuntu-20.04
