--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,10 +40,10 @@ jobs:
           wait-on: http://localhost:5000
       - name: tests passed
         if: ${{ success() }}
-        run: echo ${{ toJSON(steps) }}
+        run: echo tests passed :)
       - name: tests not passed!
         if: ${{ !success() }}
-        run: echo ${{ toJSON(steps.*.conclusion) }}
+        run: echo tests failed!
   deploy:
     if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message,' '),'#skip')}}
     runs-on: ubuntu-20.04
