--- a/.github/workflows/periodicHealthCheck.yml
+++ b/.github/workflows/periodicHealthCheck.yml
@@ -6,4 +6,16 @@ jobs:
   test:
     runs-on: ubuntu-20.04
     steps:
-     - run: echo toimii
+      - run: echo toimii
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v3
+        with:
+          # Check the following URLs one by one sequentially
+          url: https://example.com|http://example.com
+          # Follow redirects, or just report success on 3xx status codes
+          follow-redirect: false # Optional, defaults to "false"
+          # Fail this action after this many failed attempts
+          max-attempts: 3 # Optional, defaults to 1
+          # Delay between retries
+          retry-delay: 20s # Optional, only applicable to max-attempts > 1
+          # Retry all errors, including 404. This option might trigger curl upgrade.
