--- a/.github/workflows/periodicHealthCheck.yml
+++ b/.github/workflows/periodicHealthCheck.yml
@@ -11,9 +11,9 @@ jobs:
         uses: jtalk/url-health-check-action@v3
         with:
           # Check the following URLs one by one sequentially
-          url: https://pokedex-y7au.onrender.com|https://pokedex-y7au.onrender.com/health
+          url: https://pokedex-y7au.onrender.com|https://pokedex-y7au.onrender.com/health|https://pokedex-y7au.onrender.com/pokemon/pidgey
           # Follow redirects, or just report success on 3xx status codes
-          follow-redirect: false # Optional, defaults to "false"
+          follow-redirect: true # Optional, defaults to "false"
           # Fail this action after this many failed attempts
           max-attempts: 3 # Optional, defaults to 1
           # Delay between retries
