--- a/.github/workflows/periodicHealthCheck.yml
+++ b/.github/workflows/periodicHealthCheck.yml
@@ -11,7 +11,7 @@ jobs:
         uses: jtalk/url-health-check-action@v3
         with:
           # Check the following URLs one by one sequentially
-          url: https://pokedex-y7au.onrender.com|https://pokedex-y7au.onrender.com/health|https://pokedex-y7au.onrender.com/pokemon/pidgey
+          url: https://pokedex-y7au.onrender.com|https://pokedex-y7au.onrender.com/health|https://pokeapi.co/api/v2/pokemon/ivysaur
           # Follow redirects, or just report success on 3xx status codes
           follow-redirect: true # Optional, defaults to "false"
           # Fail this action after this many failed attempts
