--- a/.github/workflows/periodicHealthCheck.yml
+++ b/.github/workflows/periodicHealthCheck.yml
@@ -1,7 +1,8 @@
 name: Periodic health check
 
 on:
-  workflow_dispatch:
+  schedule:
+    - cron: '20 8 * * *'
 jobs:
   test:
     runs-on: ubuntu-20.04
