--- a/.github/workflows/periodicHealthCheck.yml
+++ b/.github/workflows/periodicHealthCheck.yml
@@ -2,7 +2,7 @@ name: Periodic health check
 
 on:
   schedule:
-    - cron: '20 7 * * *'
+    - cron: '25 * * * *'
 jobs:
   test:
     runs-on: ubuntu-20.04
